# unicecream

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: pypirelease.yml
src/unicecream/: __init__.py  __main__.py  cli.py
src/unicecream/cli/: __init__.py  main.py  parser.py
src/unicecream/core/: __init__.py  config.py  finder.py  utils.py
src/unicecream/rules/: __init__.py  base.py  ic_calls.py  imports.py
