[project]
name = "unicecream"
version = "0.1.0"
description = "A simple formatter for removing icecream from your code after debugging."
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Adrian Makridenko", email = "adrianmakridenko@duck.com" }
]
requires-python = ">=3.9"
dependencies = [
    "libcst>=1.8.6",
]

[project.urls]
Homepage = "https://github.com/lyaguxafrog/unicecream"

[project.scripts]
unicecream = "unicecream.cli:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "icecream>=2.1.10",
    "ruff>=0.15.2",
]
