[project]
name = "unicecream"
version = "0.2.0"
description = "A simple formatter for removing icecream from your code after debugging."
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Adrian Makridenko", email = "adrianmakridenko@duck.com" }
]
requires-python = ">=3.9"
dependencies = [
    "libcst>=1.8.6",
]

[project.urls]
Homepage = "https://github.com/lyaguxafrog/unicecream"

[project.scripts]
unicecream = "unicecream.cli.main:main"

[project.optional-dependencies]
toml = [
    "toml>=0.10.2",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "icecream>=2.1.10",
    "ruff>=0.15.2",
]


[tool.ruff]
target-version = "py39"
line-length = 80
ignore = ["UP009", "D100", "UP007", "D103", "D102", "D101", "D107"]
exclude = [".venv/", "debug*"]

[tool.ruff.lint]
extend-select = ["UP", "D", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["unicecream"]
split-on-trailing-comma = true
force-wrap-aliases = true
force-sort-within-sections = true
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.unicecream]
ignore = "IC001"
